# telender

./: .gitignore  README.md  input.example.yaml  install.py  pyproject.toml  requirements.txt  run_command.py  services.py  telesender.py
core/: run_command.py  services.py
