[tool.poetry]
name = "telender"
version = "0.1.0"
description = ""
authors = ["exelay <exelay.rapik@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
PyYAML = "^5.4.1"
Telethon = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
